--- a/package.json
+++ b/package.json
@@ -1,7 +1,8 @@
 {
   "name": "unit-and-co-editor",
   "version": "0.1.0",
-  "private": true,
+  "homepage": "https://fimorrr.github.io/Unit-and-CO-editor/",
+  "private": false,
   "dependencies": {
     "@testing-library/jest-dom": "^4.2.4",
     "@testing-library/react": "^9.5.0",
@@ -17,7 +18,9 @@
     "sheet": "node upgrade_names/sheetstotext",
     "build": "react-scripts build",
     "test": "react-scripts test",
-    "eject": "react-scripts eject"
+    "eject": "react-scripts eject",
+    "predeploy": "npm run build",
+    "deploy": "gh-pages -d build"
   },
   "eslintConfig": {
     "extends": "react-app"
@@ -33,5 +36,8 @@
       "last 1 firefox version",
       "last 1 safari version"
     ]
+  },
+  "devDependencies": {
+    "gh-pages": "^6.3.0"
   }
 }
